# MtGMetaAnalyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  drizzle.config.ts  package-lock.json  package.json  pyproject.toml  svelte.config.js
.github/workflows/: docker-image.yml
helm/: Chart.yaml  values.yaml
helm/templates/: NOTES.txt  deployment.yaml  https-redirect-middleware.yaml  ingress.yaml  service.yaml
migrations/: 0000_curved_thunderbolts.sql  0001_analyses_shares.sql  0002_duel_commander_banlist_cache.sql  0003_analysis_runs_ip_trace.sql  0004_analysis_runs_commander_and_ignore_dates.sql
migrations/meta/: 0000_snapshot.json  _journal.json
scripts/: docker-entrypoint.sh  migrate.mjs  purge-mtgtop8-cache.mjs
src/: hooks.server.ts
src/lib/components/: CardTable.svelte
src/lib/server/: analysis-runs-repo.ts  analysis.ts  app-error.ts  archidekt.ts  db-schema.ts  db.ts  deck-source.ts  duel-commander-banlist.ts  moxfield.ts  mtgtop8-cache-repo.ts  mtgtop8.ts  otel.ts  pipeline.ts  progress-ws.ts  progress.ts  types.ts  utils.ts
src/mtg_meta_analyzer/: __init__.py  analysis.py  cli.py  models.py  moxfield.py  mtgtop8.py  utils.py
src/routes/: +layout.svelte  +page.server.ts  +page.svelte
src/routes/analysis/[shareId]/: +page.server.ts  +page.svelte
src/routes/api/progress/[id]/: +server.ts
static/: sw.js
